Configure Redux + store.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Inagram</title>
+    <script src="https://kit.fontawesome.com/16b001ffb8.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
